--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="7dp"
     app:cardUseCompatPadding="true"
     app:cardElevation="0dp"
-    android:padding="3dp"
-    app:cardBackgroundColor="@android:color/transparent">
-
+   >
     <LinearLayout
+        android:id="@+id/item_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:layout_margin="4dp">
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="15dp">
 
         <TextView
             android:id="@+id/item_text"
@@ -28,7 +28,6 @@
             android:id="@+id/item_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
             android:src="@drawable/check_circle_outline_24"
             />
     </LinearLayout>
