--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="selected_item_color">#D7F4B3</color>
+    <color name="unselected_item_color">#E0E1DF</color>
 </resources>
